--- a/resources/sass/common/_custom.scss
+++ b/resources/sass/common/_custom.scss
@@ -53,6 +53,8 @@ img {
   position: absolute;
   top: 30px;
   border-radius: 0 10px 10px 0;
+  background-color: $theme-color-3 !important;
+  color: $white !important;
 }
 
 .logo {
