--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,8 @@
 $fa-font-path:                          "/fonts/vendor/@fortawesome/fontawesome-free" !default;
 
-$theme-color-1:                         #2c4939;
-$theme-color-2:                         #008052;
-$theme-color-3:                         #f8bf2c;
+$theme-color-1:                         #535762;
+$theme-color-2:                         #ff9c00;
+$theme-color-3:                         #fa7e05;
 $theme-color-4:                         #666666;
 
 $whatsapp-light-green:                  #25d366;
